--- a/P1/index.html
+++ b/P1/index.html
@@ -9,6 +9,6 @@
     <body>
         <p>Probando</p>
         <b>Negrita</b>
-        <img id="imagen" src="/home/alumnos/juanjose/LTAW/LTAW-Practicas/P1/halcon_milenario.jpg" alt="Mi imagen">
+        <img id="imagen" src="/halcon_milenario.jpg" alt="Mi imagen">
     </body>
     </html>
