--- a/P1/index.html
+++ b/P1/index.html
@@ -4,6 +4,7 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>El rincon de los JAWAS</title>
+        <link rel="icon" type="image/x-icon" href="/jawa_icon-icons.com_76960.png">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
