--- a/P1/index.html
+++ b/P1/index.html
@@ -5,11 +5,38 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>El rincon de los JAWAS</title>
         <link rel="icon" type="image/x-icon" href="/jawa_icon-icons.com_76960.png">
+        <link rel="stylesheet" href="style.css">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
-        <p>Probando</p>
-        <b>Negrita</b>
-        <img id="imagen" src="/halcon_milenario.jpg" alt="Mi imagen">
+        <div class="titulos">
+            <h1>El rincon de los JAWAS</h1>
+            <h2>Elige la nave que mas te guste</h2>
+            <h6>Ninguna de las naves fue robada ni saqueada</h6>
+        </div>
+        <div class="carta">
+            <div class="halcon">
+                <figure>
+                    <img id="imagen" src="/halcon_milenario.jpg" alt="Mi imagen">
+                </figure>
+                Halcon milenario
+            </div>
+        </div>
+        <div class="carta">
+            <div class="razor">
+                <figure>
+                    <img id="imagen" src="/razor1.jpg" alt="Mi imagen">
+                </figure>
+                Razor1
+            </div>
+        </div>
+        <div class="carta">
+            <div class="slave">
+                <figure>
+                    <img id="imagen" src="/slave1.jpg" alt="Mi imagen">
+                </figure>
+                Slave1
+            </div>
+        </div>      
     </body>
     </html>
