--- a/P1/index.html
+++ b/P1/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>El rincon de los JAWAS</title>
+        <title>El rincon del JAWA</title>
         <link rel="icon" type="image/x-icon" href="/jawa_icon-icons.com_76960.png">
         <link rel="stylesheet" href="style.css">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
         <div class="titulos">
-            <h1>El rincon de los JAWAS</h1>
+            <h1>El rincon del JAWA</h1>
             <h2>Elige la nave que mas te guste</h2>
             <h6>Ninguna de las naves fue robada ni saqueada</h6>
         </div>
