--- a/P1/slave.html
+++ b/P1/slave.html
@@ -4,10 +4,12 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>El rincon del JAWA</title>
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="imagenes/jawa_icon-icons.com_76960.png">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
         <h1>Slave 1</h1>
+        <a href="index.html"  class="btn">volver</button>
     </body>
 </html>
