--- a/P1/halcon.html
+++ b/P1/halcon.html
@@ -10,9 +10,6 @@
     </head>
     <body>
         <h1>Halcon Milenario</h1>
-        <div class="wrapper">
-            <button class="btn">volver</button>
-        </div>
-        
+        <a href="index.html"  class="btn">volver</button>
     </body>
 </html>
