--- a/P1/slave.html
+++ b/P1/slave.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1>Slave 1</h1>
-        <a href="index.html"  class="btn">volver</button>
+        <a href="index.html"  class="btn">volver</a>
     </body>
 </html>
