tiendita con sonido

--- a/P1/index.html
+++ b/P1/index.html
@@ -32,7 +32,7 @@
                     <img id="imagen" src="imagenes/razor1.jpg" alt="Mi imagen" >
                     </a>
                 </figure>
-                <div class="nombre">Razor 1</div>
+                <div class="nombre">Razor Crest</div>
                 
             </div>
             <div class="carta">
