--- a/P2/index.html
+++ b/P2/index.html
@@ -6,6 +6,9 @@
         <title>El rincon del JAWA</title>
         <link rel="icon" type="image/x-icon" href="imagenes/jawa_icon-icons.com_76960.png">
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="boton.css"/>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
@@ -13,6 +16,24 @@
             <h1>El rincon del JAWA</h1>
             <h2>Elige la nave que mas te guste</h2>
             <h6>Ninguna de las naves fue robada ni saqueada</h6>
+            <button class="btn" onclick="toggleLogin()">Login</button>
+            <div class="overlay">
+                <div class="login">
+                    <div class="header">
+                        <h1>Login</h1>
+                        <i class="fas fa-times" onclick="toggleLogin()"></i>
+                    </div>
+                    <div class="body">
+                        <form action="#" class="form">
+                            <input type="text" placeholder="username" />
+                            <input type="password" placeholder="Password" />
+                        </form>
+                    </div>
+                    <div class="footer">
+                        <button>Login</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="contenedor">
             <div class="carta">
@@ -47,4 +68,9 @@
             </div>
         </div>      
     </body>
+    <script>
+        function toggleLogin() {
+          document.querySelector(".overlay").classList.toggle("open");
+        }
+      </script>
     </html>
