--- a/P2/index.html
+++ b/P2/index.html
@@ -30,7 +30,7 @@
                         </form>
                     </div>
                     <div class="footer">
-                        <button>Login</button>
+                        <button class="btn2">Login</button>
                     </div>
                 </div>
             </div>
