--- a/P2/index.html
+++ b/P2/index.html
@@ -24,13 +24,13 @@
                         <i class="fas fa-times" onclick="toggleLogin()"></i>
                     </div>
                     <div class="body">
-                        <form action="#" class="form">
-                            <input type="text" placeholder="username" />
-                            <input type="password" placeholder="Password" />
+                        <form action="/log_in" class="form" method="post">
+                            <input type="text" id="username" placeholder="username" />
+                            <input type="password" id="password" placeholder="Password" />
+                            <div class="footer">
+                                <input type="submit" class="btn2" value="Submit">
+                            </div>
                         </form>
-                    </div>
-                    <div class="footer">
-                        <button class="btn2">Login</button>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     <img id="imagen" src="imagenes/halcon_milenario.jpg" alt="Mi imagen" >
                     </a>
                 </figure>
-                <div class="nombre">Halcon milenario</div>
+                <div class="nombre">Halcon Milenario</div>
                 
             </div>
             <div class="carta">
