--- a/P2/index.html
+++ b/P2/index.html
@@ -25,8 +25,8 @@
                     </div>
                     <div class="body">
                         <form action="/log_in" class="form" method="post">
-                            <input type="text" id="username" placeholder="username" />
-                            <input type="password" id="password" placeholder="Password" />
+                            <input type="text" name="username" placeholder="username" />
+                            <input type="password" name="password" placeholder="Password" />
                             <div class="footer">
                                 <input type="submit" class="btn2" value="Submit">
                             </div>
@@ -66,7 +66,8 @@
                 <div class="nombre">Slave 1</div>
                 
             </div>
-        </div>      
+        </div>     
+        <script src="tienda.js"></script> 
     </body>
     <script>
         function toggleLogin() {
