--- a/P2/index.html
+++ b/P2/index.html
@@ -17,6 +17,7 @@
             <h2>Elige la nave que mas te guste</h2>
             <h6>Ninguna de las naves fue robada ni saqueada</h6>
             <button class="btn" onclick="toggleLogin()">Login</button>
+            HTML_EXTRA
             <div class="overlay">
                 <div class="login">
                     <div class="header">
