bases barra busqueda

--- a/P2/index.html
+++ b/P2/index.html
@@ -9,6 +9,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="boton.css"/>
+        <script src="cliente.js"></script>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
@@ -18,7 +19,8 @@
             <h2>Elige la nave que mas te guste</h2>
             <h6>Ninguna de las naves fue robada ni saqueada</h6>
             <button class="btn" onclick="toggleLogin()">Login</button>
-            
+            <input type="text" id="caja">
+            <p id="display1"></p>
             <div class="overlay">
                 <div class="login">
                     <div class="header">
