servidor funciona, peta el cliente

--- a/P2/index.html
+++ b/P2/index.html
@@ -9,7 +9,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="boton.css"/>
-        <script src="cliente.js"></script>
+        <script src="cliente.js" defer></script>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     <body>
