--- a/P2/halcon.html
+++ b/P2/halcon.html
@@ -21,15 +21,13 @@
                     
                 </figure>
                 <div class="descripcion">
-                    Nave de carga liguera modelo YT-1300 Corellian Freighter
-                     altamente modificada y versátil, capaz de realizar viajes rápidos
-                     en el espacio. Es reconocible por su diseño distintivo y 
-                     sus numerosas mejoras, haciéndola ideal para contrabandistas y aventureros.
+                     <!-- descripcion -->
                     <div class="botones">
                         <a href="index.html"  class="btn">volver</a>
                         
                         <button class="btn" id="miBoton">Comprar</button>
                     </div>
+                    <!-- precio -->
                 </div>
 
             </div>
