--- a/P2/razor.html
+++ b/P2/razor.html
@@ -21,14 +21,13 @@
                     
                 </figure>
                 <div class="descripcion">
-                    Nave clase Firespray-31 resistente y versátil. 
-                    Equipada con armamento defensivo y espacio de carga suficiente
-                    para misiones de cazarrecompensas y transporte de mercancías
+                    <!-- descripcion -->
                     <div class="botones">
                         <a href="index.html"  class="btn">volver</a>
                         
                         <button class="btn" id="miBoton">Comprar</button>
                     </div>
+                    <!-- precio -->
                 </div>
 
             </div>
