--- a/P2/slave.html
+++ b/P2/slave.html
@@ -21,15 +21,13 @@
                     
                 </figure>
                 <div class="descripcion">
-                    Nave clase Firespray-31, altamente modificada y equipada 
-                    para la caza de objetivos y el transporte de prisioneros. 
-                    Reconocible por su forma distintiva y su avanzada tecnología de sigilo, 
-                    la Slave I es una herramienta letal en manos de su piloto.
+                    <!-- descripcion -->
                     <div class="botones">
                         <a href="index.html"  class="btn">volver</a>
                         
                         <button class="btn" id="miBoton">Comprar</button>
                     </div>
+                    <!-- precio -->
                 </div>
 
             </div>
