--- a/P2/halcon.html
+++ b/P2/halcon.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="titulos">
-            <h1>Halcon Milenario</h1>
+             <h1><!--nombre--></h1> 
         </div>
         <div class="contenedor">
             <div class="carta">
