--- a/P2/slave.html
+++ b/P2/slave.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="titulos">
-            <h1>Slave 1</h1>
+            <h1><!--nombre--></h1> 
         </div>
         <div class="contenedor">
             <div class="carta">
