--- a/P3/index.html
+++ b/P3/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <script src="server.js" defer></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <h1>Bienvenido a mi aplicación Web!!!</h1>
-    <input type="text" placeholder="Username" autocomplete="off" id="username">
-    <p><a href="/cliente.html">A chatear!</a></p>
+    <input type="text" id="usernameInput" placeholder="Username" autocomplete="off" >
+    <button id="submitButton">Submit</button>
+    <!-- <p><a href="/cliente.html">A chatear!</a></p> -->
+
+    <script>
+        const socket = io();
+
+        document.getElementById('submitButton').addEventListener('click', () => {
+            const username = document.getElementById('usernameInput').value;
+            socket.emit('username', username);
+            window.location.href = '/cliente.html';
+        });
+    </script>
 </body>
 </html>
