--- a/P3/index.html
+++ b/P3/index.html
@@ -6,16 +6,20 @@
     <title>Chat</title>
     <script src="server.js" defer></script>
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h1>Bienvenido a mi aplicación Web!!!</h1>
-    <h2>Elige tu nick</h2>
-    <form id="loginForm" action="/cliente.html" method="get">
-        <h2>Iniciar sesión</h2>
-        <label for="username">Nick:</label>
-        <input type="text" id="username" name="username" value="" required>
-        <input type="submit" value="Iniciar sesión">
-    </form>
+    <div id="titulos">
+        <h1>Bienvenido a mi aplicación Web!!!</h1>
+        <h2>Elige tu nick</h2>
+    </div>
+    <div id="login">
+        <form id="loginForm" action="/cliente.html" method="get">
+            <label for="username">Nick:</label>
+            <input type="text" id="username" name="username" value="" required>
+            <input type="submit" value="Iniciar sesión">
+        </form>
+    </div>
 
 </body>
 </html>
