--- a/P3/index.html
+++ b/P3/index.html
@@ -7,6 +7,8 @@
     <script src="server.js" defer></script>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="login.css">
+    <link rel="icon" type="image/x-icon" href="/jawa_icon-icons.com_76960.png">
+
 </head>
 <body>
     <div id="titulos">
