--- a/P3/cliente.html
+++ b/P3/cliente.html
@@ -11,13 +11,24 @@
 
   <!-- Cliente que usa los Sockets.io-->
   <script src="mensajes.js" defer></script>
+
+  <link rel="stylesheet" href="cliente.css">
+  <link rel="icon" type="image/x-icon" href="/jawa_icon-icons.com_76960.png">
+
 </head>
 
 <body>
-  <h2>Chat</h2>
+  <div id="titulo">
+    <h2>Chat</h2>
+  </div>
+  <div id="recibidos">
+    <h3>Mensajes recibidos</h3>
+    <p id="display"></p>
+  </div>
+  
   <input type="text" placeholder="Escribe aquí los mensajes..." autocomplete="off" id="msg_entry">
-  <h3>Mensajes recibidos</h3>
-  <p id="display"></p>
-
+  <audio id="miSonido">
+    <source src="utini.mp3" type="audio/mpeg">
+</audio>
 </body>
 </html>
