--- a/P4/index.html
+++ b/P4/index.html
@@ -18,7 +18,7 @@
     <title>Mi APP (version 10)</title>
 </head>
 <body>
-    <h1>INTERFAZ GRÁFICA</h1>
+    <h1>HOME CHAT (SERVER)</h1>
 
     <hr>
     <h2>Información:</h2>
@@ -28,13 +28,13 @@
         <li>Version electron: <span id="info3" class="blue"></span></li>
     </ul>
     <h2>Usuarios Conectados</h2>
-
+    <p id="nUsers"></p>
     <h2>Direccion IP</h2>
+    <p id="urldir"></p>
     <hr>
-    <p>Mensajes enviados desde el proceso main:</p>
-    <p>Print:  <span id='print' class="red"></span> </p>
-    <p>   <input type="button" value="Test" id="btn_test"> </p>
-   <p>Display:</p>
+    <p>Pruebas</p>
+    <p>   <input type="button" value="Enviar mensaje de prueba" id="btn_test"> </p>
+   <p>Mensajes:</p>
     <p id="display"></p>
 </body>
 </html>
