ajustes para css

--- a/P4/main.html
+++ b/P4/main.html
@@ -18,21 +18,23 @@
     <title>Mi APP (version 10)</title>
 </head>
 <body>
-    <h1>HOME CHAT (SERVER)</h1>
-
-    <hr>
-    <h2>Información:</h2>
-    <ul>
-        <li>Version Node: <span id="info1" class="blue"></span> </li>
-        <li>Version Chrome: <span id="info2" class="blue"></span></li>
-        <li>Version electron: <span id="info3" class="blue"></span></li>
-    </ul>
-    <h2>Usuarios Conectados</h2>
-    <p id="nUsers"></p>
-    <h2>Direccion IP</h2>
-    <p id="urldir"></p>
-    <hr>
-    <p>Pruebas</p>
+    <div id="titulo">
+        <h1>HOME CHAT (SERVER)</h1>
+    </div>
+    <div id="informacion">
+        <hr>
+        <h2>Información:</h2>
+        <ul>
+            <li>Version Node: <span id="info1" class="blue"></span> </li>
+            <li>Version Chrome: <span id="info2" class="blue"></span></li>
+            <li>Version electron: <span id="info3" class="blue"></span></li>
+        </ul>
+        <h2>Usuarios Conectados</h2>
+        <p id="nUsers"></p>
+        <h2>Direccion IP</h2>
+        <p id="urldir"></p>
+        <hr>
+    </div>
     <p>   <input type="button" value="Enviar mensaje de prueba" id="btn_test"> </p>
    <p>Mensajes:</p>
     <p id="display"></p>
